# odoo_rich_cli

./: CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
odoo_rich_cli/: app.py  commands.py  config.py  menu.py  scaffold.py  shell.py
