[project]
name = "odoo-rich-cli"
version = "0.1.0"
description = "A beautiful CLI tool for common Odoo operations like install, upgrade, and uninstall modules."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
odoo-cli = "odoo_rich_cli.app:app"
