[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-rich-cli"
version = "0.1.0"
description = "A beautiful CLI tool for managing Odoo modules — install, upgrade, and uninstall with Rich UI and Typer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [{ name = "Mohammed Farhan KC", email = "kcfarhan123@gmail.com" }]
keywords = ["odoo", "cli", "rich", "typer", "odoo-tools", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["rich>=13.0.0", "typer>=0.9.0"]

[project.urls]
Homepage = "https://github.com/mdfarhankc/odoo-rich-cli"
Repository = "https://github.com/mdfarhankc/odoo-rich-cli"
Issues = "https://github.com/mdfarhankc/odoo-rich-cli/issues"

[project.scripts]
odoo-cli = "odoo_rich_cli.app:app"
